--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -27,6 +27,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Todo
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="drag">
+                <span class="oi oi-list" aria-hidden="true"></span> Drag
+            </NavLink>
+        </li>
     </ul>
 </div>
 
